<resources>
    <string name="app_name">Finabox</string>
    <string name="app_short_description">List of things</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Навигационные кнопки -->
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_create_archive">Create archive</string>
    <string name="nav_restore_from_archive">Restore from archive</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_share">Share</string>
    <string name="nav_more" translatable="false">More</string>
    <string name="nav_rate_app">Rate app</string> <!-- Оценить приложение -->
    <string name="nav_communications">Communications</string>

    <string name="action_settings">Settings</string>

    <string name="adUnitId">ca-app-pub-8829875194652210/9564473342</string>
    <string name="ad_unit_id_interval">ca-app-pub-8829875194652210/2041206545</string>

        <!-- Список вещей для примера -->
    <string-array name="thing_array_primer">
        <item>Storehouse</item> <!-- Кладовая -->
        <item>Attic</item> <!-- Чердак -->
        <item>Basement</item> <!-- Подвал -->
    </string-array>
        <!-- Список вещей в кладовой для примера -->
    <string-array name="storehouse_array_primer">
        <item>shoes</item> <!-- Обувь -->
        <item>skiing</item> <!-- Лыжи -->
    </string-array>

        <!-- Список вещей на чердаке -->
    <string-array name="Attic_array_primer">
        <item>picture</item> <!-- Картина -->
        <item>soft toy</item> <!-- Мягкая игрушка -->
    </string-array>

    <!-- Список вещей в подвале -->
    <string-array name="Basement_array_primer">
        <item>lawn mower</item> <!-- Газонокосилка -->
    </string-array>

    <string name="name_item">Name</string>

    <string name="name_thing">Name things</string> <!-- имя вещи -->
    <string name="description">Description</string> <!-- описание вещи -->

    <string name="root_catalog">Корневой каталог</string>
    <string name="editor_title">Новый элемент</string>
    <string name="editor_title_edit">Редактирование</string>
    <string name="editor_title_with_type">%1$s • %2$s</string>
    <string name="type_thing">Вещь</string>
    <string name="type_box">Каталог</string>
    <string name="add_thing">Добавить вещь</string>
    <string name="add_catalog">Добавить каталог</string>
    <string name="hint_name">Название</string>
    <string name="hint_description">Описание</string>
    <string name="hint_expiration">Дата окончания</string>
    <string name="add_photo">Добавить фото</string>
    <string name="photo_picker_title">Добавьте фотографии</string>
    <string name="photo_picker_description">Прикрепите снимки из галереи или сделайте новые.</string>
    <string name="photo_picker_camera">Камера</string>
    <string name="photo_picker_gallery">Галерея</string>
    <string name="photo_preview_label">Выбранные фото</string>
    <string name="section_basic_info">Основная информация</string>
    <string name="editor_action_save">Сохранить</string>
    <string name="editor_action_delete">Удалить</string>
    <string name="error_empty_name">Введите название</string>
    <string name="photo_preview_content">Превью фотографии</string>
    <string name="remove_photo">Удалить фото</string>
    <string name="camera_permission_required">Предоставьте доступ к камере, чтобы сделать снимок.</string>
    <string name="camera_unavailable">Не удалось открыть камеру</string>
    <string name="photo_resize_error">Не удалось обработать выбранные фотографии</string>

    <string name="fragment_fotos_add">Click to add a picture.</string> <!-- Нажми, чтобы добавить свою фотографию. -->

    <string name="no_description">No description</string> <!-- Описание отсутствует -->

    <string name="icon_thing_text">T</string> <!-- В -->
    <string name="icon_box_text">B</string> <!-- Х -->

    <string name="thing">Thing</string> <!-- Вещь -->
    <string name="box">Box</string> <!-- Хранилище -->

    <string name="share">Share</string> <!-- Поделиться -->

    <string name="rsya_advertisement">Ad · Powered by the Yandex Advertising Network</string>

    <!-- описание приложения -->
    <string name="descriptionApplication">Search things will become much easier with the application - "list of things: finabox"</string>

    <!-- Диалог сохранения архива -->
    <string name="name_archive">name archive</string>
    <string name="save_archive">Create archive</string>
    <string name="message_true_save_archive">Archive successfully created</string>
    <string name="message_false_save_archive">Error creating archive</string>

    <!-- Загрузка из архива -->
    <string name="message_true_load_archive">Successfully</string>
    <string name="message_false_load_archive">Error! Unable to restore from the archive</string>
    <string name="message_no_arhive">No Archives</string>
    <string name="title_load_archive">List of files</string>
    <string name="title_restore_load_archive">Restoring from a backup</string>
    <string name="message_restore_load_archive1">Are you sure yout want to restore from the archive </string>
    <string name="message_restore_load_archive2">\? Recovery will lead to loss of current data!</string>

    <!-- Диалог удаление вещей -->
    <string name="delete_things">Delete</string>
    <string name="message_true_delete_things">Successfully delete!</string>
    <string name="message_delete_1">The following items will be deleted:</string>

    <!-- Пункты ActionMode -->
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_view">View</string>
    <string name="action_copy">Copy</string>
    <string name="action_cut">Cut</string>
    <string name="action_paste">Paste</string>

    <string name="char_pressed">✓</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!-- <string name="yandex_token" translatable="false">R-M-17528902-1</string> -->
    <string name="yandex_token" translatable="false">demo-banner-yandex</string>


</resources>
